devops/k8s/实践/启动配置文件/kubernetes_start/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: nginx.dev.com
    http:
       paths: 
          - backend: 
              serviceName: nginx
              servicePort: 80
