devops/k8s/实践/启动配置文件/kubernetes_start/k8s/sphere-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubesphere
spec:
  rules:
  - host: kubesphere.dev.com
    http:
       paths: 
          - backend: 
              serviceName: ks-console
              servicePort: 80
